force-app/main/default/objects/applicant__c/applicant__c.object-meta.xml
<CustomObject>
    <label>applicant</label>
    <nameField>
        <displayFormat>APID-{0000}</displayFormat>
        <label>applicant  ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>applicants</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>