force-app/main/default/objects/applicant__c/fields/Aadhar_card__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_card__c</fullName>
    <description>id proof data store</description>
    <inlineHelpText>id proof</inlineHelpText>
    <label>Aadhar card</label>
    <length>12</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>