force-app/main/default/objects/applicant__c/fields/aadhar_reference_number__c.field-meta.xml
<CustomField>
    <fullName>aadhar_reference_number__c</fullName>
    <label>aadhar reference number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>