force-app/main/default/objects/applicant__c/fields/age__c.field-meta.xml
<CustomField>
    <fullName>age__c</fullName>
    <formula>(TODAY() - date_barth__c) /365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>