force-app/main/default/objects/applicant__c/fields/applicant_photo__c.field-meta.xml
<CustomField>
    <fullName>applicant_photo__c</fullName>
    <label>applicant photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>