force-app/main/default/objects/applicant__c/fields/applicant_reputation__c.field-meta.xml
<CustomField>
    <fullName>applicant_reputation__c</fullName>
    <formula>IF(  ISPICKVAL( gender__c , &apos;male&apos;)  , &apos;good&apos;,   IF( ISPICKVAL( gender__c , &apos;female&apos;) ,&apos; bad&apos;, &apos;not allowed&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>applicant reputation</label>
    <type>Text</type>
</CustomField>