force-app/main/default/objects/applicant__c/fields/applicant_type__c.field-meta.xml
<CustomField>
    <fullName>applicant_type__c</fullName>
    <formula>IF(  age__c  &gt;=18, &apos;major&apos;, &apos;minor&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>applicant type</label>
    <type>Text</type>
</CustomField>