force-app/main/default/objects/applicant__c/fields/date_barth__c.field-meta.xml
<CustomField>
    <fullName>date_barth__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>date barth</label>
    <type>Date</type>
</CustomField>