force-app/main/default/objects/applicant__c/fields/document_list__c.field-meta.xml
<CustomField>
    <fullName>document_list__c</fullName>
    <label>document list</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>roll no</fullName>
            </value>
            <value>
                <fullName>age</fullName>
            </value>
            <value>
                <fullName>phone no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>