force-app/main/default/objects/applicant__c/fields/eligibility__c.field-meta.xml
<CustomField>
    <fullName>eligibility__c</fullName>
    <formula>IF( age__c &gt;=18, 


 IMAGE(&apos;https://truecallerphone-dev-ed--c.documentforce.com/servlet/servlet.ImageServer?id=0155i000000DInq&amp;oid=00D5i0000011Xkt&amp;lastMod=1650862420000&apos;,&apos;yes logo&apos; ,30,30),



 
 IMAGE(&apos;https://truecallerphone-dev-ed--c.documentforce.com/servlet/servlet.ImageServer?id=0155i000000DInv&amp;oid=00D5i0000011Xkt&amp;lastMod=1650862630000&apos;,&apos;no logo&apos;,30,30) 


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eligibility</label>
    <type>Text</type>
</CustomField>