force-app/main/default/objects/applicant__c/fields/eligible_voting__c.field-meta.xml
<CustomField>
    <fullName>eligible_voting__c</fullName>
    <formula>IF( age__c &gt;=18, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eligible voting</label>
    <type>Checkbox</type>
</CustomField>