force-app/main/default/objects/applicant__c/fields/email_id__c.field-meta.xml
<CustomField>
    <fullName>email_id__c</fullName>
    <label>email id</label>
    <type>Email</type>
</CustomField>