force-app/main/default/objects/applicant__c/fields/first_name__c.field-meta.xml
<CustomField>
    <fullName>first_name__c</fullName>
    <label>first name</label>
    <length>12</length>
    <type>Text</type>
</CustomField>