force-app/main/default/objects/applicant__c/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <description>this is used to different gender</description>
    <inlineHelpText>enter proper gender like male ,female t,ransgender</inlineHelpText>
    <label>gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>male</fullName>
            </value>
            <value>
                <fullName>female</fullName>
            </value>
            <value>
                <fullName>transgender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>