force-app/main/default/objects/applicant__c/fields/ListOfAddresses__c.field-meta.xml
<CustomField>
    <fullName>ListOfAddresses__c</fullName>
    <label>ListOfAddresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>