force-app/main/default/objects/applicant__c/fields/my_addrees1__c.field-meta.xml
<CustomField>
    <fullName>my_addrees1__c</fullName>
    <label>my addrees1</label>
    <type>TextArea</type>
</CustomField>