force-app/main/default/objects/applicant__c/fields/my_luck_number__c.field-meta.xml
<CustomField>
    <fullName>my_luck_number__c</fullName>
    <formula>IF( applicant_type__c ==&apos;major&apos;, 33,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>my luck number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>