force-app/main/default/objects/applicant__c/fields/pan_card__c.field-meta.xml
<CustomField>
    <fullName>pan_card__c</fullName>
    <externalId>true</externalId>
    <label>pan card</label>
    <length>11</length>
    <type>Text</type>
</CustomField>