force-app/main/default/objects/applicant__c/fields/passp_ort_message__c.field-meta.xml
<CustomField>
    <fullName>passp_ort_message__c</fullName>
    <label>passp[ort  message</label>
    <type>TextArea</type>
</CustomField>