force-app/main/default/objects/applicant__c/fields/passport_message_dispatch__c.field-meta.xml
<CustomField>
    <fullName>passport_message_dispatch__c</fullName>
    <description>passport_message_dispatch</description>
    <label>passport  message dispatch</label>
    <type>TextArea</type>
</CustomField>