force-app/main/default/objects/applicant__c/fields/police_varification__c.field-meta.xml
<CustomField>
    <fullName>police_varification__c</fullName>
    <defaultValue>true</defaultValue>
    <label>police varification</label>
    <type>Checkbox</type>
</CustomField>