force-app/main/default/objects/applicant__c/fields/rohit_web__c.field-meta.xml
<CustomField>
    <fullName>rohit_web__c</fullName>
    <label>rohit web</label>
    <type>Url</type>
</CustomField>