force-app/main/default/objects/applicant__c/fields/special_Mark_on_Body__c.field-meta.xml
<CustomField>
    <fullName>special_Mark_on_Body__c</fullName>
    <label>special Mark on Body</label>
    <length>18</length>
    <type>Text</type>
</CustomField>