force-app/main/default/objects/applicant__c/fields/total_balance_del__c.field-meta.xml
<CustomField>
    <fullName>total_balance_del__c</fullName>
    <label>total balance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>