force-app/main/default/objects/applicant__c/fields/voter_id__c.field-meta.xml
<CustomField>
    <fullName>voter_id__c</fullName>
    <label>voter id</label>
    <length>12</length>
    <type>Text</type>
</CustomField>