force-app/main/default/objects/applicant__c/recordTypes/applicanrgendermale.recordType-meta.xml
<RecordType>
    <fullName>applicanrgendermale</fullName>
    <active>true</active>
    <label>applicant is gender male</label>
</RecordType>