force-app/main/default/objects/applicant__c/recordTypes/applicant_ka_record_type.recordType-meta.xml
<RecordType>
    <fullName>applicant_ka_record_type</fullName>
    <active>true</active>
    <label>applicant ka record type</label>
</RecordType>