force-app/main/default/objects/applicant__c/recordTypes/ddsddsds.recordType-meta.xml
<RecordType>
    <fullName>ddsddsds</fullName>
    <active>false</active>
    <description>dsdsds</description>
    <label>ddsd</label>
</RecordType>