force-app/main/default/objects/applicant__c/recordTypes/mau_hu.recordType-meta.xml
<RecordType>
    <fullName>mau_hu</fullName>
    <active>true</active>
    <label>mau hu</label>
</RecordType>