force-app/main/default/objects/applicant__c/validationRules/applecant_fisy_name.validationRule-meta.xml
<ValidationRule>
    <fullName>applecant_fisy_name</fullName>
    <active>false</active>
    <errorConditionFormula>BEGINS( first_name__c , &apos;as&apos;)</errorConditionFormula>
    <errorMessage>not use as</errorMessage>
</ValidationRule>