force-app/main/default/objects/applicant__c/validationRules/last_name_mandatory_manager_profile.validationRule-meta.xml
<ValidationRule>
    <fullName>last_name_mandatory_manager_profile</fullName>
    <active>false</active>
    <description>last name must be mandatory manager(profile)</description>
    <errorConditionFormula>AND( ISBLANK( last_name__c ) , $Profile.Name =&apos;manager&apos;)</errorConditionFormula>
    <errorDisplayField>last_name__c</errorDisplayField>
    <errorMessage>last name is mandatory for manager user</errorMessage>
</ValidationRule>