force-app/main/default/objects/applicant__c/validationRules/len_function_applicant.validationRule-meta.xml
<ValidationRule>
    <fullName>len_function_applicant</fullName>
    <active>false</active>
    <description>len_function</description>
    <errorConditionFormula>LEN( last_name__c ) &lt; 4</errorConditionFormula>
    <errorDisplayField>last_name__c</errorDisplayField>
    <errorMessage>hjhh</errorMessage>
</ValidationRule>