force-app/main/default/objects/applicant__c/validationRules/mobile_should_number_only_ten.validationRule-meta.xml
<ValidationRule>
    <fullName>mobile_should_number_only_ten</fullName>
    <active>false</active>
    <description>mobile should only ten digit in number form</description>
    <errorConditionFormula>NOT((REGEX( mobile_no__c , &quot;^[0-9]{10}&quot;)))</errorConditionFormula>
    <errorMessage>invalid mobile number</errorMessage>
</ValidationRule>