force-app/main/default/objects/applicant__c/validationRules/prevent_aeg_less_than_18.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_aeg_less_than_18</fullName>
    <active>false</active>
    <description>prevent applicant,age&lt;18</description>
    <errorConditionFormula>age__c  &lt; 18</errorConditionFormula>
    <errorMessage>applicant must be not less than 18</errorMessage>
</ValidationRule>