force-app/main/default/objects/applicant__c/validationRules/prevent_applicant_blank_police_buntyuser.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_applicant_blank_police_buntyuser</fullName>
    <active>false</active>
    <description>preevnt applicant blank in police verification in bunty user</description>
    <errorConditionFormula>AND( police_varification__c = FALSE, $User.Id =&apos;0055i000001RR6t&apos;)</errorConditionFormula>
    <errorDisplayField>police_varification__c</errorDisplayField>
    <errorMessage>mandatory police verification user bunty</errorMessage>
</ValidationRule>