force-app/main/default/objects/applicant__c/validationRules/prevent_applicant_first_name_symbol_or.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_applicant_first_name_symbol_or</fullName>
    <active>false</active>
    <description>prevent applicant  is use symbol or number</description>
    <errorConditionFormula>OR(NOT(REGEX(  first_name__c ,&quot;^[ A-Z a-z]*$&quot;)),
NOT(REGEX(  last_name__c  ,&quot;^[A-Z a-z]*$&quot;)))</errorConditionFormula>
    <errorMessage>symbol or digit not allowed</errorMessage>
</ValidationRule>