force-app/main/default/objects/applicant__c/validationRules/prevent_dob_month_august.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_dob_month_august</fullName>
    <active>false</active>
    <description>prevent applicant if dob month is&quot;august&quot;</description>
    <errorConditionFormula>MONTH( date_barth__c ) =8</errorConditionFormula>
    <errorDisplayField>date_barth__c</errorDisplayField>
    <errorMessage>DOB MONTH SHOULD NOT BO AUGUST</errorMessage>
</ValidationRule>