force-app/main/default/objects/applicant__c/validationRules/prevent_invalid_email_id.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_invalid_email_id</fullName>
    <active>false</active>
    <description>prevent applicant invalid email id</description>
    <errorConditionFormula>NOT(REGEX(  email_id__c ,&apos;([a-zA-Z0-9_\\-\\.]+)@((\\[a-z]{1,3}\\.[a-z]{1,3}\\.[a-z]{1,3}\\.)|(([a-zA-Z0-9\\-]+\\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})&apos;))</errorConditionFormula>
    <errorDisplayField>email_id__c</errorDisplayField>
    <errorMessage>invalid email id</errorMessage>
</ValidationRule>