force-app/main/default/objects/applicant__c/validationRules/prevent_last_name_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_last_name_blank</fullName>
    <active>false</active>
    <description>prevent applicant last name is blank</description>
    <errorConditionFormula>ISBLANK( last_name__c )</errorConditionFormula>
    <errorDisplayField>last_name__c</errorDisplayField>
    <errorMessage>prevent applicant last name should not be blank</errorMessage>
</ValidationRule>