force-app/main/default/objects/applicant__c/validationRules/prevent_male_applicant.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_male_applicant</fullName>
    <active>false</active>
    <description>prevent applicant gender is male</description>
    <errorConditionFormula>ISPICKVAL(

 gender__c ,&apos;male&apos;)</errorConditionFormula>
    <errorDisplayField>gender__c</errorDisplayField>
    <errorMessage>applicant male currently not allowed</errorMessage>
</ValidationRule>