force-app/main/default/objects/applicant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>first_name__c</columns>
    <columns>gender__c</columns>
    <columns>pan_card__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>police_varification__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>special_Mark_on_Body__c</columns>
    <columns>last_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>