force-app/main/default/objects/applicant__c/listViews/quea_applicant.listView-meta.xml
<ListView>
    <fullName>quea_applicant</fullName>
    <filterScope>Queue</filterScope>
    <label>quea</label>
    <queue>quea</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>